fix full bleed blocks

--- a/wp-content/themes/ednc-2019/assets/styles/components/_blocks.scss
+++ b/wp-content/themes/ednc-2019/assets/styles/components/_blocks.scss
@@ -286,6 +286,10 @@
     border-bottom: 2px solid rgba(0, 0, 0, 0.84);
 }
 
+.longformintro--content p, h1, h2, h3, h4, h5, h6 {
+  color: white;
+}
+
 
 // .fullwidth {
 // 	margin: 32px calc(50% - 50vw);
